--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
-body {
-    font-size:24pt;
+.tooltip {
+  position: absolute;
+  font-size:16pt;
+  width: 500px;
+  height: 28px;
+  padding: 2px;
+  font: 8pt;
+  background: white;
+  border: 0px;
+  pointer-events: none;
 }
