--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,31 @@
 .tooltip {
   position: absolute;
-  font-size:12pt;
-  width: 400px;
-  height: 28px;
-  padding: 2px;
-  font: 8pt;
-  background: white;
-  border: 0px;
-  pointer-events: none;
+  text-align: center;
+  font-size:12pt;	
+    width: 400px;					
+    height: 60px;						
+    background: steelblue;	
+    pointer-events: none;
+    border: solid;
+    border-width: 2px;
+    border-radius:10px;
+}
+
+.event-text {
+    fill: black;
+    font-family: sans-serif;
+    font-size:10pt;
+    width: 400px;
+    height: 28px;
+    border: solid;
+}
+
+.tittle{
+    fill: black;
+    text-align: center;
+    font-family: sans-serif;
+    font-size:12pt;
+    width: 400px;
+    height: 28px;
+    border: solid;
 }
